--- a/battleShipPage/battleshipGame.css
+++ b/battleShipPage/battleshipGame.css
@@ -6,28 +6,29 @@ body {
     overflow: hidden;
 }
 
-.board-display {
+.main {
   width: 100%;
-  height: 60%;
+  height: 40%;
   background-color: rgb(107, 70, 70);
   display: flex;
   align-items: center;
   justify-content: space-evenly;
 }
 
-.game-board {
+#gamesboard-container {
   background-color: rgb(255, 255, 255);
   width: 400px;
   height: 400px;
   display: flex;
   flex-wrap: wrap;
+  
 }
 
-.cell {
+.block {
   width: 40px;
   height: 40px;
   border: solid 1px rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(175, 0, 0);
   box-sizing: border-box;
 }
 
@@ -35,30 +36,24 @@ body {
 
 .ship-display {
   border: 5px solid rgb(1, 1, 1);
+  background-color: red;
   width: 100%;
   height: 30%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-}
-
-.player1-ships {
-  width: 800px;
-  height: 300px;
-  margin: 30px 0;
-  border: 4px solid black;
-  display: flex;
-  align-items: center;
+  justify-content: center;
+  
   
 }
 
-.player2-ships {
+.option-container {
   width: 800px;
   height: 300px;
   margin: 30px 0;
-  border: 4px solid black;
+  background-color: yellow;
   display: flex;
   align-items: center;
+  
 }
 
 /* Ship Styling */
