--- a/battleShipPage/battleshipGame.css
+++ b/battleShipPage/battleshipGame.css
@@ -1,22 +1,26 @@
 body {
-    height: 100vh;
-    width: 100vw;
-    background-image: linear-gradient(45deg, #3b0154, #7803b3);
-    margin-top: 1.8%;
-    overflow: hidden;
+background-image: linear-gradient(45deg, #3b0154, #7803b3);
 }
 
 .main {
-  width: 100%;
-  height: 40%;
-  background-color: rgb(107, 70, 70);
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
+  margin: 0 auto;
 }
 
 #gamesboard-container {
-  background-color: rgb(255, 255, 255);
+  width: 100vw;
+  height: 50vh;
+  background-color: black;
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
+
+.game-board {
   width: 400px;
   height: 400px;
   display: flex;
@@ -28,32 +32,33 @@ body {
   width: 40px;
   height: 40px;
   border: solid 1px rgb(0, 0, 0);
-  background-color: rgb(175, 0, 0);
   box-sizing: border-box;
 }
 
 
 
 .ship-display {
-  border: 5px solid rgb(1, 1, 1);
-  background-color: red;
-  width: 100%;
-  height: 30%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-  
+width: 100vw;
+height: 40vh;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .option-container {
-  width: 800px;
+  width: 600px;
   height: 300px;
-  margin: 30px 0;
-  background-color: yellow;
   display: flex;
+  justify-content: center;
   align-items: center;
-  
+  background-color: yellow;
+}
+
+.button-container {
+  display: flex;
+  width: 200px;
+  justify-content: space-evenly;
+  margin-top: 1rem;
 }
 
 /* Ship Styling */
@@ -94,7 +99,7 @@ body {
 }
 
 .battleship {
-  background-color: yellow;
+  background-color: rgb(96, 15, 210);
 }
 
 .carrier-before{
