--- a/zBackUpbattleShipPage/battleshipGame.css
+++ b/zBackUpbattleShipPage/battleshipGame.css
@@ -41,7 +41,7 @@ background-image: linear-gradient(45deg, #3b0154, #7803b3);
 width: 100vw;
 height: 40vh;
 display: flex;
-justify-content: space-evenly;
+justify-content: center;
 align-items: center;
 }
 
