--- a/battleShipPage/battleshipGame.css
+++ b/battleShipPage/battleshipGame.css
@@ -1,18 +1,41 @@
 body {
-background-image: linear-gradient(45deg, #3b0154, #7803b3);
+background-image: linear-gradient(45deg, #3b0154, #4d0272);
+background-color: black;
+overflow: hidden;
 }
 
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 6rem 0 7rem;
+}
+
+#game-info {
+  color: white;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 10rem;
+  width: 100%;
+  max-width: 500px;
   margin: 0 auto;
 }
 
-#gamesboard-container {
+#game-info p {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+#game-info span {
+  font-weight: normal;
+}
+
+#game-container {
   width: 100vw;
-  height: 50vh;
+  height: 45vh;
   background-color: black;
   display:flex;
   justify-content: space-evenly;
@@ -35,30 +58,67 @@ background-image: linear-gradient(45deg, #3b0154, #7803b3);
   box-sizing: border-box;
 }
 
-
-
 .ship-display {
 width: 100vw;
-height: 40vh;
+height: 30vh;
 display: flex;
 justify-content: space-evenly;
 align-items: center;
 }
 
-.option-container {
-  width: 600px;
-  height: 300px;
+.ship-container {
+  width: 500px;
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: yellow;
+  background-color: white;
+  border: 2px solid #000000;
+  border-radius: 0.50rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.ship-container div {
+  width: 80px;
+  height: 40px;
+  margin: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1db954;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.ship-container div:hover {
+  background-color: #1aa34a;
 }
 
 .button-container {
   display: flex;
   width: 200px;
+  
   justify-content: space-evenly;
-  margin-top: 1rem;
+}
+
+button {
+  background-color: #1db954;
+  border: none;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #1aa34a;
 }
 
 /* Ship Styling */
@@ -79,7 +139,7 @@ align-items: center;
 }
 
 .destroyer {
-  background-color: blue
+  background-color: rgb(207, 190, 4)
 }
 
 .cruiser-before {
@@ -158,10 +218,9 @@ nav {
 /* Footer Code */
 
 #footerWrapper {
-  /* background: #21293a; */
   background: #0a0a0a;
   color: #fff;
-  padding: 2.5rem 0;
+  padding: 1.6rem 0;
   text-align: center;
   position: fixed;
   bottom: 0;
