--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -16,7 +16,7 @@ justify-content: center;
 .calculator-body {
     width: 400px;
     height: 600px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,16 +28,15 @@ justify-content: center;
     height: 200px;
     background-color: black;
     color: white;
-    font-size: xx-large;
     display: flex;
     align-items: center;
-    
-    
+    justify-content: flex-end;
 }
 
 #display {
-align-self:self-end;
-margin-left: 19rem;
+    align-self: flex-end;
+    font-size: 48px;
+    margin-right: 10px;
 }
 
 #controls {
@@ -54,6 +53,16 @@ margin-left: 19rem;
     text-align: center;
     font-size: xx-large;
     margin: 10px;
+    transition: transform 0.2s ease-in-out;
 
 }
 
+.button:hover {
+    transform: scale(1.1);
+}
+
+.button:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    transform: scale(0.9);
+    transition: all 0.1s ease-in-out;
+  }
