--- a/multiPlayerBattleShipGame/public/style.css
+++ b/multiPlayerBattleShipGame/public/style.css
@@ -130,12 +130,12 @@ body {
     content: '';
     position: absolute;
    
-    width: 2vmin;
-    height: 2vmin;
+    width: 3vmin;
+    height: 3vmin;
   }
   
   .miss::after {
-    background-color: white;
+    background-color: rgb(0, 0, 0);
   }
   
   .boom::after {
@@ -145,11 +145,8 @@ body {
   .miss::before {
     content: '';
     position: absolute;
-    animation: hit .2s ease-out forwards;
-    border: 1vmin solid white;
-    border-radius: 100%;
-    width: 2vmin;
-    height: 2vmin;
+    width: 3vmin;
+    height: 3vmin;
   }
   
   .boom {
