--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,33 @@
   box-sizing: border-box;
 }
 
+.thumbnails {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+
+/* My Project Boxes */
+body {
+  color: rgba(255, 255, 255, 0.75);
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.65;
+}
+
+#main {
+  display: flex; /* Sets the display to flexbox */
+  justify-content: center; /* Centers children horizontally */
+  align-items: center; /* Centers children vertically */
+  min-height: calc(100vh - 3rem - 2.5rem); /* 100vh is the full height. Remove the heights of navbar and footer */
+  margin-top: 3rem; /* This pushes it below the navbar */
+}
+
+
+
+
+
 li {
   list-style: none;
 }
@@ -18,8 +45,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-image: linear-gradient(45deg, #3b0154, #7803b3);
-  color: white;
+  background-color: #4f56e0;
   color: white;
   padding: 0 16rem;
   height: 3rem;
@@ -32,6 +58,7 @@ nav {
   list-style: none;
   margin: 0;
   padding: 0;
+  
 }
 
 .menu li {
@@ -84,6 +111,7 @@ nav {
     height: 200px;
     margin-right: 20px;
     overflow: hidden;
+    
 }
 
 .picture img {
@@ -106,12 +134,7 @@ nav {
   text-align: center;
 }
 
-/* My Project Boxes */
-body {
-  color: rgba(255, 255, 255, 0.75);
-  font-family: 'Source Sans Pro', sans-serif;
-  line-height: 1.65;
-}
+
 
 
 
@@ -134,23 +157,23 @@ h3 {
 /* Thumbnails Section*/
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: #2c0735;
   
 }
 
 .thumbnails {
   display: flex;
-  align-items: stretch;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 2%;
+  /* background-color: #2c0735; */
   
 }
 
 .thumbnails .box {
   margin: 0em 1em 2em 1em;
   width: 30%;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(59, 11, 91);
 }
 
 /* Box */
@@ -191,8 +214,9 @@ body {
 
 .button {
   transition: all 0.2s ease-in-out;
-  background-color: #268748;
+  background-color: #97dffc;
   border-radius: 10px;
+  color: #2c0735;
   line-height: 2.95em;
   
 }
@@ -210,7 +234,7 @@ body {
 /* Footer Code */
 
 #footerWrapper {
-  background-color: black;
+  background-color: #2c0735;
   color: #fff;
   padding: 2.5rem 0;
   text-align: center;
@@ -321,7 +345,6 @@ body {
 
 
 
-/* Specific attributes I needed to target, find a better way later */
 @media screen and (max-width: 736px) {
   #main {
     padding: 3em 0 1em 0;
